<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_camping"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/readingleedsbackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="u1652664dylanhudson.studio1.CampingActivity">

    <TextView
        android:id="@+id/textCampingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/camping_title"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/textCampingBuying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textCampingTitle"
        android:layout_marginTop="15dp"
        android:text="@string/camping_buy"
        android:textColor="@color/colorGrey" />

    <Button
        android:id="@+id/buttonBuyOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textCampingBuying"
        android:layout_marginTop="15dp"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorWhite"
        android:text="@string/camping_gooutdoors" />

    <Button
        android:id="@+id/buttonBuyTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonBuyOne"
        android:layout_marginTop="15dp"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorWhite"
        android:text="@string/camping_mountainwarehouse" />

    <TextView
        android:id="@+id/textCampingHire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonBuyThree"
        android:layout_marginTop="25dp"
        android:text="@string/camping_hire"
        android:textColor="@color/colorGrey" />

    <Button
        android:id="@+id/buttonHireOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textCampingHire"
        android:layout_marginTop="15dp"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorWhite"
        android:text="@string/camping_tent2hire" />

    <Button
        android:id="@+id/buttonHireTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonHireOne"
        android:layout_marginTop="15dp"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorWhite"
        android:text="@string/camping_pichup" />

    <Button
        android:id="@+id/buttonHireThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonHireTwo"
        android:layout_marginTop="15dp"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorWhite"
        android:text="@string/camping_campinggearhire" />

    <Button
        android:id="@+id/buttonBuyThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonBuyTwo"
        android:layout_marginTop="15dp"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorWhite"
        android:text="@string/camping_halfords" />
</RelativeLayout>
