<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/readingleedsbackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="u1652664dylanhudson.studio1.InformationActivity">

    <TextView
        android:id="@+id/textInformationPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/information_page"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_arena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_essentials"
        android:layout_marginTop="25dp"
        android:background="@color/colorSecondary"
        android:text="@string/information_thearena"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btn_personalsaftey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_arena"
        android:layout_marginTop="25dp"
        android:background="@color/colorSecondary"
        android:text="@string/information_personalsaftey"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btn_wheretostay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_volunteer"
        android:layout_marginTop="25dp"
        android:background="@color/colorSecondary"
        android:text="@string/information_wheretostay"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btn_accesscustomers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_wheretostay"
        android:layout_marginTop="25dp"
        android:background="@color/colorSecondary"
        android:text="@string/information_accesscustomers"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btn_essentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorWhite"
        android:text="@string/information_essentials"
        android:layout_below="@+id/textInformationPage"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_volunteer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_personalsaftey"
        android:layout_marginTop="25dp"
        android:background="@color/colorSecondary"
        android:text="@string/information_volunteer"
        android:textColor="@color/colorWhite" />
</RelativeLayout>
