<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/readingleedsbackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="u1652664dylanhudson.studio1.MainActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!--Container of fragments-->
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Welcome to Reading-Leeds 2017"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/informationOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleText"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/information_general"
        android:textAlignment="center"
        android:textColor="@color/colorGrey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/informationTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/informationOne"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/information_application"
        android:textAlignment="center"
        android:textColor="@color/colorGrey"
        android:textSize="14dp" />

    <Button
        android:id="@+id/btn_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/informationTwo"
        android:layout_marginTop="15dp"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorWhite"
        android:text="@string/information_name" />

    <Button
        android:id="@+id/btn_tickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_map"
        android:layout_marginTop="25dp"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorWhite"
        android:text="@string/payment_name" />

    <Button
        android:id="@+id/btn_camping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_tickets"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorWhite"
        android:text="@string/camping_name" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_performances"
        android:layout_marginTop="25dp"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorWhite"
        android:text="@string/map_name" />

    <Button
        android:id="@+id/btn_performances"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_information"
        android:layout_marginTop="25dp"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorWhite"
        android:text="@string/performances_name" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorWhite"
        android:text="@string/sign_in" />

</LinearLayout>
