<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/readingleedsbackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="u1652664dylanhudson.studio1.PaymentActivity">

    <TextView
        android:id="@+id/text_weekendCamping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_WeekendCamping"
        android:layout_alignBottom="@+id/btn_WeekendCamping"
        android:layout_alignParentStart="true"
        android:text="@string/ticket_weekendcamping"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/btn_WeekendCamping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@color/colorSecondary"
        android:text="@string/button_buy_now"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textWeekendInstallment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_WeekendCamping"
        android:layout_marginTop="24dp"
        android:text="@string/ticket_weekendcampinginstallment"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/button_WeekendInstallment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textWeekendInstallment"
        android:layout_alignBottom="@+id/textWeekendInstallment"
        android:layout_alignParentEnd="true"
        android:background="@color/colorSecondary"
        android:text="@string/button_buy_now"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textFriday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textWeekendInstallment"
        android:layout_marginTop="40dp"
        android:text="@string/ticket_friday"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/button_Friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textFriday"
        android:layout_alignBottom="@+id/textFriday"
        android:layout_alignParentEnd="true"
        android:background="@color/colorSecondary"
        android:text="@string/button_buy_now"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textSaturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textFriday"
        android:layout_marginTop="40dp"
        android:text="@string/ticket_saturday"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/button_Saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textSaturday"
        android:layout_alignBottom="@+id/textSaturday"
        android:layout_alignParentEnd="true"
        android:background="@color/colorSecondary"
        android:text="@string/button_buy_now"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textSunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_Saturday"
        android:layout_marginTop="25dp"
        android:text="@string/ticket_sunday"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/button_Sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textSunday"
        android:layout_alignBottom="@+id/textSunday"
        android:layout_alignParentEnd="true"
        android:background="@color/colorSecondary"
        android:text="@string/button_buy_now"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textTicketNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_Sunday"
        android:layout_marginTop="25dp"
        android:text="@string/ticket_notice"
        android:textColor="@color/colorGrey" />

    <TextView
        android:id="@+id/textCampingEquipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textTicketNotice"
        android:layout_marginTop="50dp"
        android:text="@string/camping_equipment"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/button_Camping_Equipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textCampingEquipment"
        android:layout_alignBottom="@+id/textCampingEquipment"
        android:layout_alignParentEnd="true"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorWhite"
        android:text="@string/button_buy_now" />

    <TextView
        android:id="@+id/textCampingInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_Camping_Equipment"
        android:layout_marginTop="25dp"
        android:text="@string/camping_information"
        android:textColor="@color/colorGrey" />

</RelativeLayout>
